starting to populate "About Me" tab with words and images

--- a/bio.html
+++ b/bio.html
@@ -19,10 +19,37 @@
 
     <div class="main">
         <div class="banner">
-            <div class="menu_icon" onclick="openNav()">
-                <div></div><div></div><div></div></div>
-            <h1>About Me</h1>
+            <div class="menu_icon" onclick="openNav()" style="float:left">
+                <div></div><div></div><div></div>
+            </div>
+            <div><h1>About Me</h1></div>
         </div>
+
+            
+            <div style="display:inline-block">
+                <img src="IMG_0489.png" height="500px" style="float: left">
+                <div><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vel tortor turpis. 
+                    Integer risus quam, aliquam eu arcu eget, posuere rutrum nunc. Nunc risus diam, 
+                    hendrerit quis lacus vitae, mattis rutrum lectus. Integer tellus massa, interdum 
+                    et sem eu, fermentum consequat justo. Proin metus tellus, pharetra vel elit quis, 
+                    tempor consectetur diam. Cras mollis felis ac leo placerat tristique. Duis eget 
+                    lorem tellus. Mauris erat erat, dapibus a venenatis nec, tempus id enim. Mauris 
+                    ullamcorper quis augue eu dictum. Suspendisse eu quam malesuada, pharetra ante non, 
+                    accumsan libero. Curabitur facilisis ipsum a eros ultricies egestas. Aenean ut 
+                    ullamcorper turpis. Aenean vestibulum sit amet enim at congue. In at massa eget velit 
+                    cursus consequat sed quis nisi. Quisque sit amet urna risus. </p></div>
+            </div>
+            <div style="display:block">
+                <div style="float:right" width="20px"><p>Aenean vitae felis rutrum eros maximus rhoncus in et lacus. Suspendisse finibus neque 
+                    vitae congue iaculis. Donec non augue pulvinar, ornare tellus vel, condimentum arcu. 
+                    Maecenas ut nibh commodo, pellentesque quam ac, gravida arcu. Cras lacinia eu nibh nec 
+                    ullamcorper. Donec ac ante in metus viverra elementum. Sed dignissim nunc ut rhoncus 
+                    rhoncus. Donec nec lobortis orci. In commodo lacus ac dapibus hendrerit. Sed dignissim 
+                    tortor neque, in iaculis nulla ultricies mattis. Praesent vel suscipit magna, in laoreet 
+                    odio. Interdum et malesuada fames ac ante ipsum primis in faucibus. Nulla sit amet 
+                    ultrices ante, ut fringilla quam. Nullam lacinia pellentesque massa, at aliquam erat rhoncus a. </p></div>
+                    <img src="IMG_0489.png" height="500px" style="float: right">
+            </div>
     </div>
 
     </body>
